esercizio1/Tiny.java
/* Tiny.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. Tiny.java */
package esercizio1;
import it.unisannio.symbolTable.*;
import java.io.FileInputStream;
import java.io.InputStream;
import java.io.FileNotFoundException;

public class Tiny/*@bgen(jjtree)*/implements TinyTreeConstants, TinyConstants {/*@bgen(jjtree)*/
  protected JJTTinyState jjtree = new JJTTinyState();
  final private int SKIP_ONE = -1;
  final private int SKIP_TWO = -2;
  final static SymbolTable symbolTable = SymbolTableFactory.getInstance();

    public static void main(String[] args) throws ParseException, FileNotFoundException {



        InputStream s;
        if (args.length > 0) {
            s = new FileInputStream(args[0]);
        } else {
            s = System.in;
        }

        Tiny t = new Tiny(s);
        SimpleNode n = t.Program();
        printTree(n,"",true);

    }


      public static void printTree(SimpleNode node, String prefix, boolean isTail) {
                String GREEN = "\u001b[32m";
                String RESET = "\u001b[0m";

                if (node == null) {
            return;
        }

        // Stampa il nodo corrente
        System.out.print(prefix);
        System.out.print(isTail ? "\u2514\u2500\u2500 " : "\u251c\u2500\u2500 ");
        if(node.value != null)
        System.out.println(node.toString()+ ": "+ GREEN + node.value +RESET);
                else
                System.out.println(node.toString());

        // Costruisci il nuovo prefisso per i figli
        prefix += isTail ? "    " : "\u2502   ";

        // Visita i figli del nodo
        for (int i = 0; i < node.jjtGetNumChildren(); i++) {
            SimpleNode child = (SimpleNode) node.jjtGetChild(i);
            printTree(child, prefix, i == node.jjtGetNumChildren() - 1);
        }
    }

// -----------------------------	




// Definizione delle regole sintattiche con nodi per l'AST
  final public SimpleNode Program() throws ParseException {/*@bgen(jjtree) Program */
  ASTProgram jjtn000 = new ASTProgram(JJTPROGRAM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Statements();
      jj_consume_token(0);
jjtree.closeNodeScope(jjtn000, true);
     jjtc000 = false;
{if ("" != null) return jjtn000;}
    } catch (Throwable jjte000) {
if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
    throw new Error("Missing return statement in function");
}

  final public void Statements() throws ParseException {/*@bgen(jjtree) Statements */
  ASTStatements jjtn000 = new ASTStatements(JJTSTATEMENTS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Statement();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TYPE:
      case PRINTFNC:
      case ID:{
        Statements();
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  final public void Statement() throws ParseException {/*@bgen(jjtree) Statement */
  ASTStatement jjtn000 = new ASTStatement(JJTSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PRINTFNC:{
        CallWrite();
        break;
        }
      case ID:{
        Assignment();
        break;
        }
      case TYPE:{
        declaration();
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
}

  final public void CallWrite() throws ParseException {/*@bgen(jjtree) CallPrint */
                                ASTCallPrint jjtn000 = new ASTCallPrint(JJTCALLPRINT);
                                boolean jjtc000 = true;
                                jjtree.openNodeScope(jjtn000);String toPrint = "";
    try {
      jj_consume_token(PRINTFNC);
      jj_consume_token(LEF_BRA);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ID:{
        jj_consume_token(ID);
        break;
        }
      case NUMBER:{
        jj_consume_token(NUMBER);
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
toPrint = symbolTable.getRecord(token.image,0,0).getValue().toString();
      jj_consume_token(RIGHT_BRA);
      jj_consume_token(SEMICOLON);
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
System.out.println(toPrint);
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  final public void declaration() throws ParseException {/*@bgen(jjtree) declaration */
                                   ASTdeclaration jjtn000 = new ASTdeclaration(JJTDECLARATION);
                                   boolean jjtc000 = true;
                                   jjtree.openNodeScope(jjtn000);String type;
    try {
      jj_consume_token(TYPE);
jjtn000.value = token.image; type = token.image;
      jj_consume_token(ID);
      multiDeclaration(type);
      jj_consume_token(SEMICOLON);
    } catch (Throwable jjte000) {
if (jjtc000) {
              jjtree.clearNodeScope(jjtn000);
              jjtc000 = false;
            } else {
              jjtree.popNode();
            }
            if (jjte000 instanceof RuntimeException) {
              {if (true) throw (RuntimeException)jjte000;}
            }
            if (jjte000 instanceof ParseException) {
              {if (true) throw (ParseException)jjte000;}
            }
            {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
              jjtree.closeNodeScope(jjtn000, true);
            }
    }
}

  final public void multiDeclaration(String type) throws ParseException {/*@bgen(jjtree) multiDeclaration */
  ASTmultiDeclaration jjtn000 = new ASTmultiDeclaration(JJTMULTIDECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMMA:{
        jj_consume_token(COMMA);
        jj_consume_token(ID);
symbolTable.put(token.image, token.kind, 0,0,0,0); symbolTable.updateRecordType(token.image,0,0,type); jjtn000.value = token.image;
        multiDeclaration(type);
        break;
        }
      default:
        jj_la1[3] = jj_gen;
jjtree.closeNodeScope(jjtn000, true);
                                                                                                                                                                                jjtc000 = false;

      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  final public void Assignment() throws ParseException {/*@bgen(jjtree) Assignment */
                                 ASTAssignment jjtn000 = new ASTAssignment(JJTASSIGNMENT);
                                 boolean jjtc000 = true;
                                 jjtree.openNodeScope(jjtn000);Token t; Integer val;
    try {
      jj_consume_token(ID);
t = token;
      jj_consume_token(ASSIGNMENT);
      val = Expression();
      jj_consume_token(SEMICOLON);
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
symbolTable.updateRecordVal(t.image, 0,0, val);
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  final public Integer Expression() throws ParseException {/*@bgen(jjtree) Expression */
                                    ASTExpression jjtn000 = new ASTExpression(JJTEXPRESSION);
                                    boolean jjtc000 = true;
                                    jjtree.openNodeScope(jjtn000);Integer val; Integer sumResult = null;
    try {
      val = MulDivExpr();
      sumResult = ExpressionExt(val);
jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
if (sumResult != null) {if ("" != null) return sumResult;}
          {if ("" != null) return val;}
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
}

  final public Integer ExpressionExt(Integer operand) throws ParseException {/*@bgen(jjtree) ExpressionExt */
                                                         ASTExpressionExt jjtn000 = new ASTExpressionExt(JJTEXPRESSIONEXT);
                                                         boolean jjtc000 = true;
                                                         jjtree.openNodeScope(jjtn000);String operator = null; Integer operand2 = null; Integer val = null; Integer result= null;
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SUM_DIF:{
        sumDif();
operator = token.image;
        operand2 = MulDivExpr();
if(operator.equals("+") ) { val = operand+operand2;} else if (operator.equals("-") ) {val = operand-operand2; }
        result = ExpressionExt(val);
if(result != null) {if ("" != null) return result;} {if ("" != null) return val;}
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        ;
      }
jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
{if ("" != null) return val;}
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
}

  final public Integer MulDivExpr() throws ParseException {/*@bgen(jjtree) MulDivExpr */
                                    ASTMulDivExpr jjtn000 = new ASTMulDivExpr(JJTMULDIVEXPR);
                                    boolean jjtc000 = true;
                                    jjtree.openNodeScope(jjtn000);Integer val; Integer val2;
    try {
      val = Factor();
      val2 = MulDivExprExt(val);
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
if(val2 != null) {if ("" != null) return val2;}
    {if ("" != null) return val;}
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
}

  final public Integer MulDivExprExt(Integer operand) throws ParseException {/*@bgen(jjtree) MulDivExprExt */
                                                         ASTMulDivExprExt jjtn000 = new ASTMulDivExprExt(JJTMULDIVEXPREXT);
                                                         boolean jjtc000 = true;
                                                         jjtree.openNodeScope(jjtn000);boolean factorFound = false; String operator = null; Integer val = null; Integer fact = null; Integer mulDiv = null;
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MULT_DIV:{
        jj_consume_token(MULT_DIV);
operator = token.image;
        fact = Factor();
if(operator.equals("*") ) { val = operand*fact; } else if (operator.equals("/") ) {val = operand/fact; }
        mulDiv = MulDivExprExt(val);
        break;
        }
      default:
        jj_la1[5] = jj_gen;

      }
jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
if(mulDiv != null) {if ("" != null) return mulDiv;} {if ("" != null) return val;}
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
}

  final public Integer Factor() throws ParseException {/*@bgen(jjtree) Factor */
                            ASTFactor jjtn000 = new ASTFactor(JJTFACTOR);
                            boolean jjtc000 = true;
                            jjtree.openNodeScope(jjtn000);Integer val =0; Integer result = null;
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ID:{
        jj_consume_token(ID);
val = (Integer) symbolTable.getRecord(token.image, 0,0).getValue();
        break;
        }
      case NUMBER:{
        jj_consume_token(NUMBER);
val = Integer.parseInt(token.image);
        break;
        }
      case LEF_BRA:{
        jj_consume_token(LEF_BRA);
        result = Expression();
if (result != null) val = result;
        jj_consume_token(RIGHT_BRA);
        break;
        }
      case SUM_DIF:{
        jj_consume_token(SUM_DIF);
        jj_consume_token(NUMBER);
val = Integer.parseInt(token.image);
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
{if ("" != null) return val;}
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
}

  final public void sumDif() throws ParseException {/*@bgen(jjtree) sumDif */
  ASTsumDif jjtn000 = new ASTsumDif(JJTSUMDIF);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(SUM_DIF);
jjtree.closeNodeScope(jjtn000, true);
                jjtc000 = false;
jjtn000.value = token.image;
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  /** Generated Token Manager. */
  public TinyTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[7];
  static private int[] jj_la1_0;
  static {
	   jj_la1_init_0();
	}
	private static void jj_la1_init_0() {
	   jj_la1_0 = new int[] {0x86,0x86,0xc0,0x20,0x1000,0x800,0x12c0,};
	}

  /** Constructor with InputStream. */
  public Tiny(java.io.InputStream stream) {
	  this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public Tiny(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source = new TinyTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 7; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
	  ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jjtree.reset();
	 jj_gen = 0;
	 for (int i = 0; i < 7; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public Tiny(java.io.Reader stream) {
	 jj_input_stream = new SimpleCharStream(stream, 1, 1);
	 token_source = new TinyTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 7; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
	if (jj_input_stream == null) {
	   jj_input_stream = new SimpleCharStream(stream, 1, 1);
	} else {
	   jj_input_stream.ReInit(stream, 1, 1);
	}
	if (token_source == null) {
 token_source = new TinyTokenManager(jj_input_stream);
	}

	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jjtree.reset();
	 jj_gen = 0;
	 for (int i = 0; i < 7; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public Tiny(TinyTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 7; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(TinyTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jjtree.reset();
	 jj_gen = 0;
	 for (int i = 0; i < 7; i++) jj_la1[i] = -1;
  }

  private Token jj_consume_token(int kind) throws ParseException {
	 Token oldToken;
	 if ((oldToken = token).next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 if (token.kind == kind) {
	   jj_gen++;
	   return token;
	 }
	 token = oldToken;
	 jj_kind = kind;
	 throw generateParseException();
  }


/** Get the next Token. */
  final public Token getNextToken() {
	 if (token.next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 jj_gen++;
	 return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
	 Token t = token;
	 for (int i = 0; i < index; i++) {
	   if (t.next != null) t = t.next;
	   else t = t.next = token_source.getNextToken();
	 }
	 return t;
  }

  private int jj_ntk_f() {
	 if ((jj_nt=token.next) == null)
	   return (jj_ntk = (token.next=token_source.getNextToken()).kind);
	 else
	   return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;

  /** Generate ParseException. */
  public ParseException generateParseException() {
	 jj_expentries.clear();
	 boolean[] la1tokens = new boolean[18];
	 if (jj_kind >= 0) {
	   la1tokens[jj_kind] = true;
	   jj_kind = -1;
	 }
	 for (int i = 0; i < 7; i++) {
	   if (jj_la1[i] == jj_gen) {
		 for (int j = 0; j < 32; j++) {
		   if ((jj_la1_0[i] & (1<<j)) != 0) {
			 la1tokens[j] = true;
		   }
		 }
	   }
	 }
	 for (int i = 0; i < 18; i++) {
	   if (la1tokens[i]) {
		 jj_expentry = new int[1];
		 jj_expentry[0] = i;
		 jj_expentries.add(jj_expentry);
	   }
	 }
	 int[][] exptokseq = new int[jj_expentries.size()][];
	 for (int i = 0; i < jj_expentries.size(); i++) {
	   exptokseq[i] = jj_expentries.get(i);
	 }
	 return new ParseException(token, exptokseq, tokenImage);
  }

  private boolean trace_enabled;

/** Trace enabled. */
  final public boolean trace_enabled() {
	 return trace_enabled;
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

}
